fix icon/number alignment in stepper items

--- a/src-core/src/components/stepper-item/stepper-item.scss
+++ b/src-core/src/components/stepper-item/stepper-item.scss
@@ -12,8 +12,6 @@
   font-weight: 700;
   width: 24px;
   height: 24px;
-  margin-right: 4px;
-  border: 1px solid transparent;
   border-radius: 100%;
   color: $se-white;
   background-color: $se-light-grey;
@@ -21,6 +19,27 @@
     font-family: 'se-icon';
     font-size: 24px;
     font-weight: 400;
+    &:after {
+      content: 'notification_ok';
+      font-size: 32px;
+      position: relative;
+      right: 28px;
+    }
+  }
+}
+
+// Align checkmark on MS Edge browser.
+// Will remove when Chromium-based Edge browser is released.
+@supports (-ms-ime-align:auto) {
+  .indicator.se-icon:after {
+    top: 1px;
+  }
+}
+
+// Align checkmark on IE11.
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+  .indicator.se-icon:after {
+    top: 1px;
   }
 }
 
@@ -42,8 +61,7 @@
   font-size: 16px;
   font-weight: 700;
   line-height: 19px;
-  padding-left: 3px;
-  padding-right: $spacing;
+  margin: 0 $spacing;
   &:hover {
     font-weight: 400;
   }
